--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -5,12 +5,13 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-top: 30px;
+}
+
+a {
+  color: burlywood;
 }
 
 canvas {
-  border: solid black 2px;
-}
-
-img {
-  display: none;
+  border: 2px solid black;
 }
